# aoc2020

./: Cargo.toml  DEVELOPERS.md  README.md  index.html  styles.scss
src/: main.rs  router.rs  utils.rs
src/components/: calendar.rs  input.rs  mod.rs
src/days/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  mod.rs
src/pages/: home.rs  mod.rs  puzzle_unavailable.rs
src/services/: routing.rs
