[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"

[dependencies]
gloo = "0.2"
lazy_static = "1.4"
regex = "1.4"
wasm-bindgen = "0.2"
weblog = "0.3"
yew = { git = "https://github.com/yewstack/yew", rev = "2c60d596e74b7b22e5d19fff014d03059278f84c" }

[dependencies.web-sys]
version = "0.3"
features = ["History", "Location", "PopStateEvent", "Window"]
